[metadata]
name = fithlang
version = 0.2.1
description = The Fith programming language and 5vm compiler and tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mishaklopukh/fithlang/
project_urls = 
    Documentation = https://mishaklopukh.github.io/fithlang/
author = Misha Klopukh
author_email = mklopukh2019@fau.edu
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Software Development :: Compilers

[options]
zip_safe = False
include_package_data = True
packages = fith,
    
[options.entry_points]
console_scripts =
    5cc = fith.fith:main
    fithc = fith.fith:main
    5asm = fith.asm5:main
    5vm = fith.vm5:main
